# Github-mcp

./: README.md  package.json  pyproject.toml  test.py
src/github-mcp/: tools.py
src/github_mcp/: github_client.py  main.py  test.py  tools.py
